@@ -110,7 +110,7 @@ public class Search {
                 results.add(course);
             }
         }
-        results = orderedResultsFromQuery(query, results);
+        results = orderedResultsFromQuery();
         return results;
     }
 
@@ -172,14 +172,14 @@ public class Search {
      */
     public String suggestWord(String query) {
         ArrayList<String> matches = new ArrayList<>();
+        // get all words in wordFreqMap that begin with query
         for (String s : wordFreqMap.keySet()) {
             if (s.indexOf(query) == 0) {
                 matches.add(s);
             }
         }
-//        System.out.println(matches.size());
-        if (!matches.isEmpty() && matches.size() < 10) { // TODO: fine tune this threshold
-            String match = matches.get(0);
+        if (!matches.isEmpty() && matches.size() < 10) { // if a match exists and there are less than ten of them, return the match with the highest frequency
+            String match = matches.getFirst();
             int count = wordFreqMap.get(match);
             for (int i = 1; i < matches.size(); i++) {
                 if (wordFreqMap.get(matches.get(i)) > count) {
@@ -194,15 +194,15 @@ public class Search {
 
     /**
      *
-     * @param q query to search with
-     * @param courses courses to check against query
      * @return ArrayList of courses matching the query, ordered from most to least relevant to the query
      */
-    private ArrayList<Course> orderedResultsFromQuery(String q, ArrayList<Course> courses){
+    private ArrayList<Course> orderedResultsFromQuery(){
+        // key: relevance score
+        // value: ArrayList of courses with that score
         TreeMap<Double, ArrayList<Course>> resultsMap = new TreeMap<>(Collections.reverseOrder());
 
-        for(Course course : courses){
-            double score = 0.0;
+        for(Course course : results){ // check each course in results to see if it matches the query
+            double score = 0.0; // use to keep track of how well the query matches course
             String[] nameWords = course.getName().toLowerCase().split(" ");
             String[] queryWords = query.split(" ");
             for (String queryWord : queryWords) {
@@ -215,12 +215,13 @@ public class Search {
             for(int i = 0; i < queryWords.length; i++){
                 String queryWord = queryWords[i];
                 double addToScore = 0.0;
-                boolean spellChecked = false;
+                boolean spellChecked = false; // whether the original word from the user or its spell checked version is being used
 
                 for(int j = 0; j < nameWords.length; j++){
                     String nameWord = nameWords[j];
                     int idx = nameWord.indexOf(queryWord);
 
+                    // if queryWord is not contained in nameWord, try again using the spell checked version of queryWord
                     if(idx == -1){
                         String match = spellCheckedWords.get(queryWord);
                         if(match != null){
@@ -230,21 +231,21 @@ public class Search {
                     }
 
                     if(idx != -1) {
-                        if (queryWord.equals(nameWord)) { // query matches current word from course name
-                            if (j == 0) { // matches first word in course name
+                        if (queryWord.equals(nameWord)) {
+                            if (j == 0) { // if queryWord equals first word in the course name
                                 addToScore = 1;
                             } else {
-                                addToScore = 0.9;
+                                addToScore = 0.9; // if queryWord equals a word other than the first in the course name
                             }
-                            j = nameWords.length; // stop checking words from course name
-                        } else { // if query appears in current course name word
-                            if (idx == 0) { // if it appears at the beginning of course name word
-                                if (j == 0) { // if it appears in the first word of the course name
+                            j = nameWords.length; // exit loop
+                        } else { // if query is contained in nameWord, but not equal to
+                            if (idx == 0) { // if it appears at the beginning of nameWord
+                                if (j == 0) { // if it appears in the first word of the nameWord
                                     addToScore = 0.8;
-                                } else if (addToScore < 0.7) { // if it appears in a word of the course name other than the first
+                                } else if (addToScore < 0.7) { // if it appears in a nameWord other than the first
                                     addToScore = 0.7;
                                 }
-                            } else if (queryWord.length() > 1 && addToScore < 0.4) { // query is inside of a word
+                            } else if (queryWord.length() > 1 && addToScore < 0.4) { // if query is inside of a word
                                 addToScore = 0.4;
                             }
                         }
@@ -253,14 +254,14 @@ public class Search {
                 if(spellChecked){ // give slightly less favor to courses found when using spell check
                     addToScore -= .05;
                 }
-                if(addToScore <= 0.0){
+                if(addToScore <= 0.0){ // if queryWord is in no words of the course name, give a negative score
                     score -= 0.4;
                 } else{
                     score += addToScore;
                 }
             }
-            score = score / queryWords.length;
-            if(score > 0) {
+            score = score / queryWords.length; // normalize score according to length
+            if(score > 0) { // only return results with a positive score
                 if (resultsMap.containsKey(score)) {
                     resultsMap.get(score).add(course);
                 } else {
@@ -278,13 +279,18 @@ public class Search {
         return orderedResults;
     }
 
-    public String getBestMatch(String word){
-        char[] wordArr = word.toLowerCase().toCharArray();
-        if(word.length() > 3) { // only spell check words length 4 or longer
-            for (Iterator<String> it = wordSet.iterator(); it.hasNext(); ) {
-                String next = it.next().toLowerCase();
-                if (Math.abs(word.length() - next.length()) <= 2) {
-                    if (diffAlgorithm(wordArr, next.toCharArray()) <= 3) {
+    /**
+     * Used for spell checking search querys
+     * @param queryWord word to spell check, i.e. check if there is a close match for it among the words in wordSet
+     * @return a sufficiently close match for queryWord from wordSet, or null if no such match exists
+     */
+    public String getBestMatch(String queryWord){
+        char[] wordArr = queryWord.toLowerCase().toCharArray();
+        if(queryWord.length() > 3) { // only spell check words length 4 or longer
+            for (String s : wordSet) {
+                String next = s.toLowerCase();
+                if (Math.abs(queryWord.length() - next.length()) <= 2) { // the match cannot be more than 2 characters longer or shorter than queryWord
+                    if (diffAlgorithm(wordArr, next.toCharArray()) <= 3) { // the match must be no more than 3 edits away from queryWord (see diffAlgorithm for explanation of edits)
                         return next;
                     }
                 }
@@ -293,6 +299,10 @@ public class Search {
         return null;
     }
 
+    /**
+     *
+     * @return set of all words found in the names of the course in DB
+     */
     public HashSet<String> getSetOfWords(){
         HashSet<String> wordSet = new HashSet<>();
         for(Course course : DB.getCourses()){
